--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -8,7 +8,8 @@
 <composite:interface>
 	<composite:attribute name="shareTableController"></composite:attribute>
 	<composite:attribute name="percentBean"></composite:attribute>
-
+	<composite:attribute name="editingDisable"></composite:attribute>
+	
 
 
 </composite:interface>
@@ -26,7 +27,7 @@
 			<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 			<h:inputText id="atheneumCapitalBalance"
 				value="#{cc.attrs.shareTableController.shareTable.atheneumCapitalBalance}"
-				label="#{msgs.shareTableCapitalBalance}" required="true">
+				label="#{msgs.shareTableCapitalBalance}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="atheneumCapitalBalanceError  percentAtheneumCapitalBalance" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -44,7 +45,7 @@
 			<h:outputText value="#{msgs.shareTableCommonBalance}:" />
 			<h:inputText id="atheneumCommonBalance"
 				value="#{cc.attrs.shareTableController.shareTable.atheneumCommonBalance}"
-				label="#{msgs.shareTableCommonBalance}" required="true">
+				label="#{msgs.shareTableCommonBalance}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="atheneumCommonBalanceError percentAtheneumCommonBalance" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -60,7 +61,7 @@
 			<h:outputText value="#{msgs.shareTablePersonnel}:" />
 			<h:inputText id="personnel"
 				value="#{cc.attrs.shareTableController.shareTable.personnel}"
-				label="#{msgs.shareTablePersonnel}" required="true">
+				label="#{msgs.shareTablePersonnel}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="personnelError percentPersonnel" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -75,7 +76,7 @@
 			<h:outputText value="#{msgs.shareTableStructures}:" />
 			<h:inputText id="structures"
 				value="#{cc.attrs.shareTableController.shareTable.structures}"
-				label="#{msgs.shareTableStructures}" required="true">
+				label="#{msgs.shareTableStructures}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="structuresError percentStructures" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -90,7 +91,7 @@
 			<h:outputText value="#{msgs.shareTableGoods}:" />
 			<h:inputText id="goodsAndServices"
 				value="#{cc.attrs.shareTableController.shareTable.goodsAndServices}"
-				label="#{msgs.shareTableGoods}" required="true">
+				label="#{msgs.shareTableGoods}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="goodsAndServicesError percentGoodsAndServices" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -105,7 +106,7 @@
 			<h:outputText value="#{msgs.shareTableTrip}:" />
 			<h:inputText id="businessTrip"
 				value="#{cc.attrs.shareTableController.shareTable.businessTrip}"
-				label="#{msgs.shareTableTrip}" required="true">
+				label="#{msgs.shareTableTrip}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="businessTripError percentBusinessTrip" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -120,7 +121,7 @@
 			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 			<h:inputText id="consumerMaterials"
 				value="#{cc.attrs.shareTableController.shareTable.consumerMaterials}"
-				label="#{msgs.shareTableConsMaterials}" required="true">
+				label="#{msgs.shareTableConsMaterials}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="consumerMaterialsError percentConsumerMaterials" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -135,7 +136,7 @@
 			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 			<h:inputText id="inventoryMaterials"
 				value="#{cc.attrs.shareTableController.shareTable.inventoryMaterials}"
-				label="#{msgs.shareTableInvMaterials}" required="true">
+				label="#{msgs.shareTableInvMaterials}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="inventoryMaterialsError percentInventoryMaterials" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -150,7 +151,7 @@
 			<h:outputText value="#{msgs.shareTableRentals}:" />
 			<h:inputText id="rentals"
 				value="#{cc.attrs.shareTableController.shareTable.rentals}"
-				label="#{msgs.shareTableRentals}" required="true">
+				label="#{msgs.shareTableRentals}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="rentalsError percentRentals" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -165,7 +166,7 @@
 			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 			<h:inputText id="personnelOnContract"
 				value="#{cc.attrs.shareTableController.shareTable.personnelOnContract}"
-				label="#{msgs.shareTableContrPersonnel}" required="true">
+				label="#{msgs.shareTableContrPersonnel}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="personnelOnContractError percentPersonnelOnContract" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -180,7 +181,7 @@
 			<h:outputText value="#{msgs.shareTableOtherCosts}:" />
 			<h:inputText id="otherCost"
 				value="#{cc.attrs.shareTableController.shareTable.otherCost}"
-				label="#{msgs.shareTableOtherCosts}" required="true">
+				label="#{msgs.shareTableOtherCosts}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="otherCostError percentOtherCost" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -215,7 +216,7 @@
 				</f:facet>
 
 			<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}"
-				label="#{msgs.chief}" filter="true" filterMatchMode="contains">
+				label="#{msgs.chief}" filter="true" filterMatchMode="contains" disabled="#{cc.attrs.editingDisable}">
 				<f:selectItem itemLabel="Selezionare" itemValue="#{null}" />
 				<f:selectItems value="#{utilPB.chiefItems}" />
 				<f:converter binding="#{chiefConverterPersonnelShare}" />
@@ -225,10 +226,10 @@
 			<f:facet name="footer">
 				<p:commandButton value="#{msgs.add}"
 					action="#{cc.attrs.shareTableController.addRow()}"
-					update="personnelShares" process="personnelShares, @this" />
+					update="personnelShares" process="personnelShares, @this" rendered="!#{cc.attrs.editingDisable}" />
 				<p:commandButton value="#{msgs.remove}"
 					action="#{cc.attrs.shareTableController.removeRow()}"
-					update="personnelShares" process="personnelShares, @this" />
+					update="personnelShares" process="personnelShares, @this" rendered="!#{cc.attrs.editingDisable}" />
 			</f:facet>
 		</p:column>
 
