--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -9,15 +9,17 @@
 	<h:outputStylesheet name="home.css" library="css" />
 
 	<script type="text/javascript">
-		jQuery(document).ready(function(){
+		function setRowEvent(){
 			jQuery('#agreementTable tr')
 				.mouseover(function(){
 								jQuery(this).find(".agr-list-button").show();
 							})
 				.mouseout(function(){
-								jQuery(this).find(".agr-list-button").hide();
+							jQuery(this).find(".agr-list-button").hide();
 							});
-			});
+		}
+			
+		jQuery(document).ready(setRowEvent);
 	</script>
 </h:head>
 <h:body>
@@ -38,24 +40,27 @@
 			rowsPerPageTemplate="5,10,15"
 			paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}"
 			selection="#{agreementListPB.selectedValue}" selectionMode="single"
-			rowKey="#{agr.id}">
+			rowKey="#{agr.id}" sortOrder="descending">
 			
-			
+			<p:ajax event="filter" oncomplete="setRowEvent();"/>
+			<p:ajax event="sort" oncomplete="setRowEvent();"/>
+			<p:ajax event="page" oncomplete="setRowEvent();"/>
 
-			<p:column id="chiefColumn" filterBy="#{agr.chief.id}"
+			<p:column id="agrTableChiefColumn" filterBy="#{agr.chief.id}"
 				headerText="#{msgs.chief}" filterMatchMode="exact"
 				filterOptions="#{utilPB.filterChiefItems}">
 				<h:outputText value="#{agr.chief.completeName}" />
 			</p:column>
 
-			<p:column id="companyColumn" filterBy="#{agr.company.id}"
+			<p:column id="agrTableCompanyColumn" filterBy="#{agr.company.id}"
 				headerText="#{msgs.company}" filterMatchMode="exact"
 				filterOptions="#{utilPB.filterCompanyItems}">
 				<h:outputText value="#{agr.company.name}" />
 			</p:column>
 
-			<p:column id="dateColumn" styleClass="button-left-column" sortBy="#{agr.approvalDate}">
-				<f:facet name="header" >
+			<p:column id="agrTableDateColumn"
+				sortBy="#{agr.approvalDate}">
+				<f:facet name="header">
 	                	#{msgs.approvalDate}  
 					<h:form id="calendarFilters">
 						<div style="display: block; width: 90%; margin: auto;">
@@ -83,18 +88,15 @@
 				<h:outputText value="#{agr.approvalDate}">
 					<f:convertDateTime locale="it" dateStyle="full" />
 				</h:outputText>
-			</p:column>
-
-			<p:column styleClass="button-right-column button-column">
-				<p:commandButton id="viewAgrBtn" styleClass="agr-list-button"
+				<p:commandButton styleClass="agr-list-button"
 					icon="ui-icon-search" />
-				<p:commandButton id="editAgrBtn" styleClass="agr-list-button"
+				<p:commandButton styleClass="agr-list-button"
 					icon="ui-icon-wrench" action="#{agreementListPB.editAgreement()}">
 					<f:setPropertyActionListener value="#{agr}"
 						target="#{agreementListPB.selectedValue}" />
 				</p:commandButton>
-
 			</p:column>
+
 
 		</p:dataTable>
 
