--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -28,8 +28,7 @@
 
 				<p:tab id="tabRip" title="Passo 2">
 					<sections:wizShareTable editingDisable="false"
-						shareTableController="#{agreementWizardPCB.shareTableController}"
-						percentBean="#{agreementWizardPCB}" />
+						bean="#{agreementWizardPCB}" />
 				</p:tab>
 
 				<ui:include src="/resources/sections/agreementWizAttachments.xhtml" />
