aggiunta di qualche redirect

--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -29,7 +29,7 @@
 				<ui:include src="/resources/sections/agreementWizData.xhtml" />
 
 				<p:tab id="tabRip" title="Passo 2">
-					<sections:wizShareTable editingDisable="false"
+					<sections:wizShareTable editingDisable="true"
 						bean="#{agreementWizardPCB}" />
 				</p:tab>
 
