--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -11,11 +11,13 @@
 </h:head>
 <h:body>
 	<h:form>
-	<h:outputText value="Cosa vuoi fare oggi?" styleClass="text" />
-	<h:commandButton value="Crea Convenzione" action="#{agreementManager.createAgreement()}" styleClass="buttons" />
-	<h:button value="Aggiungi Rata"
-		outcome="/resources/sections/installmentWiz" styleClass="buttons" />
-	<h:button value="Lista convenzioni"	outcome="agreementList" styleClass="buttons" />
+		<h:outputText value="Cosa vuoi fare oggi?" styleClass="text" />
+		<h:commandButton value="Crea Convenzione"
+			action="#{agreementManager.createAgreement()}" styleClass="buttons" />
+		<h:button value="Aggiungi Rata"
+			outcome="/resources/sections/installmentWiz" styleClass="buttons" />
+		<h:button value="Lista convenzioni" outcome="agreementList"
+			styleClass="buttons" />
 	</h:form>
 </h:body>
 
